Classes rework